# Robot_TrackingSystem_Calibration

./: .gitignore  CMakeLists.txt  README.md  observations.json  results.txt  vcpkg.json
matlab_utilities/: Robot_TrackSyst_Calibration_experimental.m  Robot_TrackSyst_Calibration_simulation.m  addNoiseToTransformationMatrix.m  calculate_error_between_2_transf_matrices.m  create_simulation_data.m  invert_transformation_matrix.m  real_calibration_error.m  trajectories_simulation.m  transfParameters_to_transfMatrix.m
matlab_utilities/simulation_data/: simul_data_200_observations.mat  simul_data_500_observations.mat  simul_data_600_observations.mat
plus_config/: mha_read_transforms.m  only_polaris.xml  robot_polaris_data_acquisition.bat  robot_polaris_data_acquisition.xml  save_mha_to_mat_file.m
plus_config/acquired_data/: experimental_data_1.mat
src/: cpp_calibration_solver.cpp  parallel_for.h
